tests/ui/del_abi3_unsupported.stderr
error[E0080]: evaluation panicked: `__del__` requires Python >= 3.15 when using the `abi3` feature
  --> tests/ui/del_abi3_unsupported.rs:18:1
   |
18 | #[pymethods]
   | ^^^^^^^^^^^^ evaluation of `<impl pyo3::impl_::pyclass::PyMethods<Foo> for pyo3::impl_::pyclass::PyClassImplCollector<Foo>>::py_methods::ITEMS::_` failed here
   |
   = note: this error originates in the attribute macro `pymethods` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
