tests/ui/del_abi3_unsupported.rs
//! On abi3 before Python 3.15, `__del__` is unsupported because
//! `PyObject_CallFinalizerFromDealloc` is not part of the limited API. The
//! `#[pymethods]` codegen emits a compile-time assertion which produces a clear
//! diagnostic instead of an opaque "cannot find `finalizefunc`" error.
//!
//! This file only fails to compile on abi3 builds older than 3.15; on every
//! other supported configuration `__del__` works and this file compiles, so it
//! is skipped there (see `test_compile_error.rs`).

use pyo3::prelude::*;

#[pyclass]
struct Foo;

// The diagnostic is emitted from the slot table generated by `#[pymethods]`, so
// it is reported at the attribute rather than at `fn __del__` (consistent with
// how `#[pyclass(immutable_type)]` reports its version requirement).
#[pymethods] //~ ERROR: `__del__` requires Python >= 3.15 when using the `abi3` feature
impl Foo {
    fn __del__(&mut self) {}
}

fn main() {}
